[package]
name = "dotenv"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.9", features = ["derive"] }
hex = "0.4.3"
ignore = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
ring = "0.17.8"
secp256k1 = { version = "0.29.0", features = ["rand"] }
serde = "1.0.204"
